contact and prov psych

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,15 +13,15 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
       Ready to transform your clinical practice with responsible AI integration?
     </p>
   </div>
+    <button onclick="openBookingForm()" class="btn mb-2">
+    <span>BOOK NOW</span>
+  </button>
 </header>
 </div>
 
 <!-- Contact Section -->
 <section id="contact" class="section bg3">
-  <button onclick="openBookingForm()" class="hero-cta mb-2">
-    <span>BOOK NOW</span>
-    <small class="hero-cta-subtitle">Transform Your Practice</small>
-  </button>
+
 
   <div class="two-col-grid">
     <div>
