--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -81,7 +81,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
       <p>for Provisional Psychologists</p>
     </div>
     <div class="page-header__media">
-      <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+      <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header">
     </div>
   </header>
 
