--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -86,7 +86,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
   </header>
 
   <section class="card mb-6">
-    <h2 class="content-info-header-alt mb-2">🤝 Huge News!</h2>
+    <h2 class="mb-2">🤝 Huge News!</h2>
     <p class="section-text-alt">
       I'm excited to announce that we can present to you <u>free</u> AI scribe tools
       for provisional psychologists<br />
