--- a/standards/index.html
+++ b/standards/index.html
@@ -90,7 +90,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
     <div class="flex-col gap-2">
       <article class="card no-hover card--transparent" id="accountability">
         <h3 class="card-title">1. Accountability</h3>
-        <p>
+        <p class="card-text--bulk">
           Responsibility is taken by the user for any decisions made based on,
           or as a result of an AI-generated product.
         </p>
@@ -115,7 +115,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="inaccuracy">
         <h3 class="card-title">2. Potential inaccuracy of AI Job Produced</h3>
-        <p>
+        <p class="card-text--bulk">
           Recognise that AI may produce work which is low quality or whereby the
           quality is unclear.
         </p>
@@ -140,7 +140,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="prohibited">
         <h3 class="card-title">3. Prohibited Uses</h3>
-        <p>
+        <p class="card-text--bulk">
           Avoid using AI for academic tasks that would misrepresent one's own
           capabilities or be considered 'excessive' (e.g. having the AI complete
           mandated psychology internship tasks fully for you when the intention
@@ -161,7 +161,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="bias">
         <h3 class="card-title">4. Data Bias</h3>
-        <p>
+        <p class="card-text--bulk">
           Be aware of the potential biases in AI algorithms and datasets.
           Recognise the potential for AI to make biased and stereotyped
           responses based on flawed, limited or incomplete data.
@@ -174,7 +174,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="confidentiality">
         <h3 class="card-title">5. Confidentiality</h3>
-        <p>
+        <p class="card-text--bulk">
           Ensure that any personal or sensitive data (e.g. names, date of birth,
           addresses, names of family members) used in conjunction with AI tools
           is deidentified and if necessary kept confidential and secure.
@@ -196,7 +196,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="transparency">
         <h3 class="card-title">6. Transparency</h3>
-        <p>
+        <p class="card-text--bulk">
           Ideally before any service begins and with consent, seek to be
           transparent to the reader, client, peer or stakeholder about the use
           of AI in research, practice, and professional decision-making.
@@ -205,7 +205,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="education">
         <h3 class="card-title">7. Continued Education</h3>
-        <p>
+        <p class="card-text--bulk">
           As AI technology continues to evolve, it is important for
           psychologists, provisional psychologists and psychology students to
           stay informed about new developments and best practices in the field.
@@ -217,7 +217,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="communication">
         <h3 class="card-title">8. Organisational communication</h3>
-        <p>
+        <p class="card-text--bulk">
           Ensure that you receive permission to use AI by your management and
           that its use is consistent with your organsational policy.
         </p>
@@ -225,7 +225,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="copyright">
         <h3 class="card-title">9. Copyright</h3>
-        <p>
+        <p class="card-text--bulk">
           The user should not enter resources that are copyrighted into AI.
         </p>
       </article>
@@ -235,7 +235,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
           10. Use of AI in ways that prioritise client welfare, consent and
           privacy
         </h3>
-        <p>
+        <p class="card-text--bulk">
           <em
             >This standard is referenced but no additional details are
             provided.</em
@@ -247,7 +247,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
         <h3 class="card-title">
           11. Consistent AI use in line with the AI program's existing policies
         </h3>
-        <p>
+        <p class="card-text--bulk">
           <em
             >This standard is referenced but no additional details are
             provided.</em
@@ -260,7 +260,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
           12. Your use of AI will be consistent with the 8 voluntary Australian
           AI Ethics principles
         </h3>
-        <p>
+        <p class="card-text--bulk">
           <em
             >(as of 30 November 2023) by the Department of Industry, Science and
             Resources:</em
@@ -307,7 +307,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
           13. Your AI use as a psychologist should be compliant with the
           professional competencies
         </h3>
-        <p>
+        <p class="card-text--bulk">
           <em>(i.e. you agree to use AI ethically in these contexts)</em>
         </p>
         <p>
@@ -344,7 +344,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="product-disclaimer">
         <h3 class="card-title">14. Product Disclaimer</h3>
-        <p>
+        <p class="card-text--bulk">
           If you purchase any Psychology Squared Product which utilises AI, you
           recognise that the product results may vary, be unpredictable and
           largely out of the control of Psychology Squared. Psychology Squared
@@ -357,7 +357,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="staff-disclaimer">
         <h3 class="card-title">15. Staff Recommendations Disclaimer</h3>
-        <p>
+        <p class="card-text--bulk">
           You understand that posts and recommendations by Psychology Squared
           staff reviewing AI products do not represent any endorsement of the
           legality or ethics of the use of this AI.
@@ -366,7 +366,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 
       <article class="card no-hover card--transparent" id="ai-usage">
         <h3 class="card-title">16. AI Usage in Psychology Squared Resources</h3>
-        <p>
+        <p class="card-text--bulk">
           AI including ChatGPT, Jasper and others may be used in the production
           of Psychology Squared Resources.
         </p>
