fix spelling mistake

--- a/community/index.html
+++ b/community/index.html
@@ -815,7 +815,7 @@
                         <div class="feature">
                             <div class="feature-icon">🤝</div>
                             <h3>Collaborative Community</h3>
-                            <p>Learn from cinicians using the tools you are using and learn about exciting new ones. You
+                            <p>Learn from clinicians using the tools you are using and learn about exciting new ones. You
                                 will also be able to connect to founders, developers, IT and legal experts.</p>
                         </div>
                         <div class="feature">
