Changed footer text

--- a/community/index.html
+++ b/community/index.html
@@ -929,7 +929,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Unified Intelligence. Empowering clinicians with AI innovation.</p>
+            <p>&copy; 2025 AI for Clinicians. Empowering clinicians with AI innovation.</p>
         </footer>
     </div>
 
