--- a/community/index.html
+++ b/community/index.html
@@ -793,7 +793,7 @@
             <div class="hero">
                 <div class="hero-content">
                     <span class="badge">
-                        <span>🚀</span>
+                        <!-- <span>🚀</span> -->
                         <span>Launching Soon</span>
                     </span>
 
