--- a/community/coming-soon.html
+++ b/community/coming-soon.html
@@ -5,7 +5,7 @@ title: Coming Soon
 <div class="c-hero">
     <div class="c-hero-content">
         <span class="c-badge">
-            <span>🚀</span>
+            <!-- <span>🚀</span> -->
             <span>Building Something Extraordinary</span>
         </span>
         <h1 class="c-main-heading">Exciting New Features <span class="c-highlight">Coming Soon</span></h1>
@@ -14,13 +14,13 @@ title: Coming Soon
     </div>
 </div>
 
-<div class="c-features">
+<div class="cs-timeline-features">
     <div class="timeline-header">
         <h2>Upcoming Features & Content</h2>
         <p>Your roadmap to the future of AI in allied health</p>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q1 2025</div>
             <span class="status-badge status-development">In Development</span>
@@ -38,7 +38,7 @@ title: Coming Soon
         </div>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q1 2025</div>
             <span class="status-badge status-development">In Development</span>
@@ -55,7 +55,7 @@ title: Coming Soon
         </div>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q2 2025</div>
             <span class="status-badge status-coming">Coming Soon</span>
@@ -73,7 +73,7 @@ title: Coming Soon
         </div>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q2 2025</div>
             <span class="status-badge status-coming">Coming Soon</span>
@@ -91,7 +91,7 @@ title: Coming Soon
         </div>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q2 2025</div>
             <span class="status-badge status-coming">Coming Soon</span>
@@ -109,7 +109,7 @@ title: Coming Soon
         </div>
     </div>
 
-    <div class="c-feature">
+    <div class="cs-timeline-card">
         <div class="timeline-date">
             <div class="date-badge">Q3 2025</div>
             <span class="status-badge status-coming">Coming Soon</span>
@@ -148,7 +148,7 @@ title: Coming Soon
     </div>
 </div>
 
-<div class="c-waitlist-section">
+<div class="c-bottom-section">
     <h2>Want to Influence What We Build?</h2>
     <p>Your input shapes our community. Share your ideas, vote on upcoming features, and help us create the
         resources you need most.</p>
