--- a/community/index.html
+++ b/community/index.html
@@ -41,7 +41,7 @@ title: AI for Clinicians Community
     </div>
 </div>
 
-<div class="c-waitlist-section">
+<div class="c-bottom-section">
     <h2>Secure Your Early Access</h2>
     <p>This is just an expression of interest.<br>Waitlist signees get exclusive access to early bird
         membership.</p>
