--- a/community/landing-page.html
+++ b/community/landing-page.html
@@ -90,7 +90,7 @@ title: Join the AI for Clinicians Community
     </div>
 </div>
 
-<div class="c-waitlist-section">
+<div class="c-bottom-section">
     <h2>Ready to Transform Your Practice?</h2>
     <p>Join the waitlist and be among the first to access our exclusive community when we launch. Get early
         access to resources, connect with pioneers in AI-integrated healthcare, and help shape the future of our
