--- a/community/index.html
+++ b/community/index.html
@@ -9,7 +9,7 @@ title: AI for Clinicians Community
             <span>Launching Soon</span>
         </span>
 
-        <h1 class="c-main-heading">
+        <h1 class="c-main-heading text-left">
             Discounts on AI tools<br>
             <span class="c-highlight">Join like-minded clinicans</span>
             <br>Stay up to date on the latest issues<br>
