--- a/community/index.html
+++ b/community/index.html
@@ -62,7 +62,7 @@ title: AI for Clinicians Community
                     I want to gain Exclusive Discounts and Join as a Super Member
                     <span class="tooltip">
                         <span class="tooltip-trigger">?</span>
-                        <span class="tooltip-text">Exclusive discounts and access to resources for members who
+                        <span class="tooltip-text">Exclusive discounts and recognition for members who
                             actively help build the community. Spots are limited and subject to approval.</span>
                     </span>
                 </label>
