input validatoin and contribution wording

--- a/community/index.html
+++ b/community/index.html
@@ -86,15 +86,13 @@ title: AI for Clinicians Community
                     </select>
                 </div>
                 <div class="c-field-group">
-                    <label for="contentType">What content would you like to contribute?</label>
+                    <label for="contentType">How would you like to contribute?</label>
                     <select id="contentType" class="c-select-input">
-                        <option value="">Select content type</option>
+                        <option value="">Select contribution type</option>
+                        <option value="networking">Networking and Outreach</option>
                         <option value="courses-and-workshops">Courses and Workshops</option>
                         <option value="events-and-webinars">Events and Webinars</option>
                         <option value="regular-socials">Regular Posts and Discussions</option>
-                        <option value="resources">Resources (Learning Materials, Articles, Best Practices)
-                        </option>
-                        <option value="products">Products</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
