--- a/community/memberships.html
+++ b/community/memberships.html
@@ -3,30 +3,27 @@ layout: circle-community
 title: Choose Your Membership
 ---
 
-<div class="c-hero">
+<section class="c-hero" aria-labelledby="memberships-title">
     <div class="c-hero-content text-center">
-        <h1 class="c-main-heading">Choose Your <span class="c-highlight">Membership Plan</span></h1>
-        <p class="c-subtitle">Join our community of forward-thinking clinicians and unlock exclusive resources, expert
-            guidance, and
-            collaborative opportunities.</p>
-
-        <div class="deadline-notice" id="deadlineNotice">
+        <h1 class="c-main-heading" id="memberships-title">Choose Your <span class="c-highlight">Membership Plan</span>
+        </h1>
+        <p class="c-subtitle">Join our community of clinicians and unlock exclusive resources, expert guidance, and networking opportunities.</p>
+        <aside class="deadline-notice" id="deadlineNotice" aria-label="Limited time offer">
             <div class="icon">⏰</div>
             <h3>Limited Time Offer</h3>
             <p>Lock in Early Adopter pricing before December 31st and save!</p>
-        </div>
+        </aside>
     </div>
 
-</div>
-<div class="c-features">
-    <!-- Facilitators Plan -->
-    <div class="c-feature">
-        <div class="card-header">
+</section>
+<section class="c-features" aria-label="Membership plans">
+    <article class="c-feature">
+        <header class="card-header">
             <div class="header-title">
-                <h3>Facilitators</h3>
+                <h3 id="super-member-plan">Super Member</h3>
             </div>
-            <p>For active community contributors who help shape discussions and support fellow members.</p>
-        </div>
+            <p aria-describedby="super-member-plan"><strong>Access to all early adopter benefits.</strong> For active community contributors who want to proactively develop discussions and support fellow members. (NB Tech skills is not a requirement)</p>
+        </header>
 
         <div class="price-container">
             <div class="price">
@@ -39,23 +36,21 @@ title: Choose Your Membership
 
         <ul class="features-list">
             <li>All standard member benefits</li>
-            <li>Contribute to community discussions</li>
-            <li>Help onboard new members</li>
-            <li>Share expertise and insights</li>
+            <li>You agree to contribute actively to community discussions</li>
+            <li>You agree to help onboard new members</li>
+            <li>Share your expertise, questions and insights</li>
             <li>Recognition as community facilitator</li>
         </ul>
 
-        <div class="special-note">
-            <p><strong>Engagement Requirements:</strong> Facilitator rates are subject to minimum engagement
-                requirements.</p>
-        </div>
+        <footer class="special-note">
+            <p><strong>Engagement Requirements:</strong> Facilitator rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
+        </footer>
 
-        <button class="c-submit-button">Apply to Facilitate</button>
-    </div>
+        <button class="c-submit-button" type="button">Apply to Facilitate</button>
+    </article>
 
-    <!-- Early Adopter / Standard Plan -->
-    <div class="c-feature featured">
-        <div class="card-header">
+    <article class="c-feature featured">
+        <header class="card-header">
             <div class="header-title">
                 <h3 id="memberPlanTitle">Early Adopter</h3>
                 <span class="c-badge" id="planBadge">
@@ -63,9 +58,8 @@ title: Choose Your Membership
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
-            <p>Full access to our community platform, resources, and collaborative network of AI-forward
-                clinicians.</p>
-        </div>
+            <p aria-describedby="memberPlanTitle">Full access to our community platform, resources, and network of clinicians.</p>
+        </header>
 
         <div class="price-container">
             <div class="price">
@@ -78,15 +72,42 @@ title: Choose Your Membership
 
         <ul class="features-list">
             <li>Unlimited access to community platform</li>
-            <li>Curated knowledge base & resources</li>
-            <li>Active discussion forums</li>
-            <li>AI tool recommendations & reviews</li>
-            <li>Case studies & best practices</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
             <li>Expert contributor content</li>
-            <li>Monthly live sessions & workshops</li>
-            <li>Priority support</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
         </ul>
 
-        <button class="c-submit-button">Get Started</button>
-    </div>
-</div>
+        <button class="c-submit-button" type="button">Get Started</button>
+    </article>
+
+    <article class="c-feature featured">
+        <header class="card-header">
+            <div class="header-title">
+                <h3 id="memberPlanTitle">Standard</h3>
+            </div>
+            <p aria-describedby="memberPlanTitle">Full access to our community platform, resources, and network of clinicians.</p>
+        </header>
+
+        <div class="price-container">
+            <div class="price">
+                <div class="price-amount">
+                    <span class="price-currency">$</span><span id="priceValue">19</span>
+                </div>
+                <div class="price-period" id="pricePeriod">per month</div>
+            </div>
+        </div>
+
+        <ul class="features-list">
+            <li>Unlimited access to community platform</li>
+            <li>Knowledge base & resources</li>
+            <li>Discussion forums</li>
+            <li>Expert contributor content</li>
+            <li>Regular live discussions and networking (online)</li>
+            <li>Access to courses (Coming soon)</li>
+        </ul>
+
+        <button class="c-submit-button" type="button">Get Started</button>
+    </article>
+</section>
