--- a/community/memberships.html
+++ b/community/memberships.html
@@ -82,7 +82,7 @@ title: Choose Your Membership
         <button class="c-submit-button" type="button">Get Started</button>
     </article>
 
-    <article class="c-feature featured">
+    <article class="c-feature">
         <header class="card-header">
             <div class="header-title">
                 <h3 id="memberPlanTitle">Standard</h3>
