membership-layout-uplift

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -19,10 +19,12 @@ title: Choose Your Membership
 <section class="c-features" aria-label="Membership plans">
     <article class="c-feature">
         <header class="card-header">
-            <div class="header-title">
+            <div class="header-title margin-top">
                 <h3 id="super-member-plan">Super Member</h3>
             </div>
-            <p aria-describedby="super-member-plan"><strong>Access to all early adopter benefits.</strong> For active community contributors who want to proactively develop discussions and support fellow members. (NB Tech skills is not a requirement)</p>
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all early adopter benefits.</strong> 
+                For active community contributors who want to proactively develop discussions 
+                support fellow members.</p>
         </header>
 
         <div class="price-container">
@@ -46,15 +48,16 @@ title: Choose Your Membership
             <p><strong>Engagement Requirements:</strong> Facilitator rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
         </footer>
 
-        <button class="c-submit-button" type="button">Apply to Facilitate</button>
+        <div class="c-button-wrapper">
+            <button class="c-submit-button" type="button">Apply to Facilitate</button>
+        </div>
     </article>
 
     <article class="c-feature featured">
         <header class="card-header">
             <div class="header-title">
                 <h3 id="memberPlanTitle">Early Adopter</h3>
-                <span class="c-badge" id="planBadge">
-                    <span id="planBadgeIcon">🌟</span>
+                <span class="c-badge limited-badge-position" id="planBadge">
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
@@ -79,15 +82,17 @@ title: Choose Your Membership
             <li>Access to courses (Coming soon)</li>
         </ul>
 
-        <button class="c-submit-button" type="button">Get Started</button>
+        <div class="c-button-wrapper">
+            <button class="c-submit-button" type="button">Get Started</button>
+        </div>
     </article>
 
     <article class="c-feature">
         <header class="card-header">
-            <div class="header-title">
+            <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Standard</h3>
             </div>
-            <p aria-describedby="memberPlanTitle">Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"  class="card-header-subtext">Full access to our community platform, resources, and network of clinicians.</p>
         </header>
 
         <div class="price-container">
@@ -108,6 +113,8 @@ title: Choose Your Membership
             <li>Access to courses (Coming soon)</li>
         </ul>
 
-        <button class="c-submit-button" type="button">Get Started</button>
+        <div class="c-button-wrapper">
+            <button class="c-submit-button" type="button">Get Started</button>
+        </div>
     </article>
 </section>
