--- a/community/memberships.html
+++ b/community/memberships.html
@@ -49,7 +49,7 @@ title: Choose Your Membership
         </footer>
 
         <div class="c-button-wrapper">
-            <button class="c-submit-button" type="button">Apply to Facilitate</button>
+            <button class="c-submit-button" type="button">Get Started</button>
         </div>
     </article>
 
@@ -87,7 +87,7 @@ title: Choose Your Membership
         </div>
     </article>
 
-    <article class="c-feature">
+    <article class="c-feature disabled">
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Standard</h3>
