--- a/community/memberships.html
+++ b/community/memberships.html
@@ -45,7 +45,7 @@ title: Choose Your Membership
         </ul>
 
         <footer class="special-note">
-            <p><strong>Engagement Requirements:</strong> Facilitator rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
+            <p><strong>Engagement Requirements:</strong> Super Member rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
         </footer>
 
         <div class="c-button-wrapper">
@@ -91,6 +91,9 @@ title: Choose Your Membership
         <header class="card-header">
             <div class="header-title margin-top">
                 <h3 id="memberPlanTitle">Standard</h3>
+                <span class="c-badge limited-badge-position-standard" id="planBadge">
+                    <span id="planBadgeText">Starting January</span>
+                </span>
             </div>
             <p aria-describedby="memberPlanTitle"  class="card-header-subtext">Full access to our community platform, resources, and network of clinicians.</p>
         </header>
