--- a/community/memberships.html
+++ b/community/memberships.html
@@ -16,6 +16,14 @@ title: Choose Your Membership
     </div>
 
 </section>
+<div class="c-toggle-container desktop-toggle">
+    <span class="c-toggle-label">Monthly</span>
+    <label class="c-switch">
+        <input type="checkbox" class="pricingToggle">
+        <span class="c-slider"></span>
+    </label>
+    <span class="c-toggle-label">Annually</span>
+</div>
 <section class="c-features" aria-label="Membership plans">
     <article class="c-feature">
         <header class="card-header">
@@ -64,12 +72,21 @@ title: Choose Your Membership
             <p aria-describedby="memberPlanTitle">Full access to our community platform, resources, and network of clinicians.</p>
         </header>
 
+        <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle">
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div>
+
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span><span id="priceValue">9</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="14" data-annually="9">14</span>
                 </div>
-                <div class="price-period" id="pricePeriod">per month</div>
+                <div class="price-period-annually">per month</div>
             </div>
         </div>
 
@@ -98,12 +115,21 @@ title: Choose Your Membership
             <p aria-describedby="memberPlanTitle"  class="card-header-subtext">Full access to our community platform, resources, and network of clinicians.</p>
         </header>
 
+        <div class="c-toggle-container mobile-toggle">
+            <span class="c-toggle-label">Monthly</span>
+            <label class="c-switch">
+                <input type="checkbox" class="pricingToggle">
+                <span class="c-slider"></span>
+            </label>
+            <span class="c-toggle-label">Annually</span>
+        </div>
+
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span><span id="priceValue">19</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="19" data-annually="14">19</span>
                 </div>
-                <div class="price-period" id="pricePeriod">per month</div>
+                <div class="price-period-annually">per month</div>
             </div>
         </div>
 
