linked to circle paywalls

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -57,7 +57,7 @@ title: Choose Your Membership
         </footer>
 
         <div class="c-button-wrapper">
-            <button class="c-submit-button" type="button">Get Started</button>
+            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=WNZ1OKCN" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 
@@ -100,7 +100,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <button class="c-submit-button" type="button">Get Started</button>
+            <a href="https://aiforclin.circle.so/checkout/35percent-discount?coupon_code=ZATSLPHE" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 
@@ -143,7 +143,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <button class="c-submit-button" type="button">Get Started</button>
+            <a href="https://aiforclin.circle.so/checkout/standard-pricing" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 </section>
