--- a/community/memberships.html
+++ b/community/memberships.html
@@ -11,7 +11,7 @@ title: Choose Your Membership
         <aside class="deadline-notice" id="deadlineNotice" aria-label="Limited time offer">
             <div class="icon">⏰</div>
             <h3>Limited Time Offer</h3>
-            <p>Lock in Early Adopter pricing before December 31st and save!</p>
+            <p>Lock in Early Adopter pricing and get <strong>40% off</strong> before December 31st!</p>
         </aside>
     </div>
 
@@ -30,7 +30,7 @@ title: Choose Your Membership
             <div class="header-title margin-top">
                 <h3 id="super-member-plan">Super Member</h3>
             </div>
-            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all early adopter benefits.</strong> 
+            <p aria-describedby="super-member-plan" class="card-header-subtext"><strong>Access to all early adopter benefits.</strong><br>
                 For active community contributors who want to proactively develop discussions 
                 support fellow members.</p>
         </header>
@@ -53,7 +53,7 @@ title: Choose Your Membership
         </ul>
 
         <footer class="special-note">
-            <p><strong>Engagement Requirements:</strong> Super Member rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
+            <p><strong>Engagement Requirements:</strong>Super Member rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
         </footer>
 
         <div class="c-button-wrapper">
@@ -69,7 +69,7 @@ title: Choose Your Membership
                     <span id="planBadgeText">Limited Time</span>
                 </span>
             </div>
-            <p aria-describedby="memberPlanTitle">Full access to our community platform, resources, and network of clinicians.</p>
+            <p aria-describedby="memberPlanTitle"><strong>Early adopters get 40% off for 12 months.</strong><br>Full access to our community platform, resources, and network of clinicians.</p>
         </header>
 
         <div class="c-toggle-container mobile-toggle">
@@ -84,7 +84,8 @@ title: Choose Your Membership
         <div class="price-container">
             <div class="price">
                 <div class="price-amount">
-                    <span class="price-currency">$</span><span class="price-value" data-monthly="14" data-annually="9">14</span>
+                    <span class="price-original" data-monthly="$19" data-annually="$14">$19</span>
+                    <span class="price-currency">$</span><span class="price-value" data-monthly="11.40" data-annually="8.40">11.40</span>
                 </div>
                 <div class="price-period-annually">per month</div>
             </div>
@@ -100,7 +101,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/35percent-discount?coupon_code=ZATSLPHE" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/40percent-discount?coupon_code=DDPYKEAA" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 
