--- a/community/memberships.html
+++ b/community/memberships.html
@@ -53,7 +53,7 @@ title: Choose Your Membership
         </ul>
 
         <footer class="special-note">
-            <p><strong>Engagement Requirements:</strong>Super Member rates are subject to minimum engagement requirements and may be required to subscribe if you disengage.</p>
+            <p><strong>Engagement Requirements:</strong> Super Member rates are subject to minimum engagement requirements.</p>
         </footer>
 
         <div class="c-button-wrapper">
