--- a/comparisons/companies/ecko.html
+++ b/comparisons/companies/ecko.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UpliftGroup (UpLift AI) - AI Scribe Details</title>
+    <title>Ecko Health - AI Scribe Details</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap"
       rel="stylesheet"
@@ -377,7 +377,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1>UpliftGroup (UpLift AI)</h1>
+        <h1>Ecko Health</h1>
         <p>AI-Driven Operating System for Mental Health Professionals</p>
       </header>
 
@@ -386,8 +386,8 @@
           <section class="info-section">
             <h3>Company Overview</h3>
             <p><strong>Founder:</strong> Marika Conomos</p>
-            <p><strong>Company:</strong> UpLift AI</p>
-            <p><strong>Contact:</strong> hello@upliftgroup.ai</p>
+            <p><strong>Company:</strong> Ecko Health</p>
+            <p><strong>Contact:</strong> hello@eckohealth.ai</p>
             <p>
               <strong>Specialization:</strong> Fully AI-driven operating system
               combining AI therapy, practice management, and patient engagement
@@ -537,10 +537,10 @@
             >Back to Comparison</a
           >
           <a
-            href="mailto:hello@upliftgroup.ai"
+            href="mailto:hello@eckohealth.ai"
             class="nav-button"
-            aria-label="Contact UpliftGroup via email"
-            >Contact UpliftGroup</a
+            aria-label="Contact Ecko Health via email"
+            >Contact Ecko Health</a
           >
         </nav>
       </article>
