super member form

--- a/community/memberships.html
+++ b/community/memberships.html
@@ -57,7 +57,7 @@ title: Choose Your Membership
         </footer>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/super-membership?coupon_code=WNZ1OKCN" target="_blank" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScM91mlTIv8oVvGIOgaASk_RJmMnDFV6ECuM-u09o6XK5--lg/viewform?usp=header" target="_blank" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 
@@ -144,7 +144,7 @@ title: Choose Your Membership
         </ul>
 
         <div class="c-button-wrapper">
-            <a href="https://aiforclin.circle.so/checkout/standard-pricing" class="c-submit-button" type="button">Get Started</a>
+            <a href="https://aiforclin.circle.so/checkout/membership" class="c-submit-button" type="button">Get Started</a>
         </div>
     </article>
 </section>
